--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -64,7 +64,7 @@
    },
    "outputs": [],
    "source": [
-    "def model(horizon, avg_working_time, avg_repair_time, n, m, setup):\n",
+    "def model(horizon, avg_working_time, avg_repair_time, n, m, setup, c):\n",
     "    # setup - układ liniowy \"L\" lub gniazdowy \"G\"\n",
     "    \n",
     "    # horyzont działania w minutach\n",
@@ -251,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
