--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,15 @@
     "horizon = 30 # dni\n",
     "\n",
     "# liczba uruchomień symulacji\n",
-    "iterations = 10   "
+    "iterations = 10\n",
+    "\n",
+    "# koszt jednostkowy\n",
+    "c = 1.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -190,26 +193,30 @@
     "        # ustalamy nowe t\n",
     "        t = min(events)\n",
     "        \n",
-    "    # wynik - liste skumulowanych bezczynnosci dla kazdej z maszyn\n",
-    "    return (t_cum)"
+    "    t_cost = [t*c for t in t_cum]\n",
+    "    # wynik skumulowany czas oraz koszt\n",
+    "    return (t_cum, t_cost)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_model (iterations, horizon, avg_working_time, avg_repair_time, n, m, setup):\n",
+    "def run_model (iterations, horizon, avg_working_time, avg_repair_time, n, m, setup, c):\n",
     "    avg_t_cum = []\n",
+    "    avg_t_cost = []\n",
     "    for i in range (iterations):\n",
-    "        avg_t_cum.append(model( horizon, avg_working_time, avg_repair_time, n, m, setup))\n",
-    "    return list(map(np.mean, np.transpose(avg_t_cum)))\n"
+    "        x = model( horizon, avg_working_time, avg_repair_time, n, m, setup, c)\n",
+    "        avg_t_cum.append(x[0])\n",
+    "        avg_t_cost.append(x[1])\n",
+    "    return (list(map(np.mean, np.transpose(avg_t_cum))), list(map(np.mean, np.transpose(avg_t_cost))))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -217,21 +224,27 @@
     {
      "data": {
       "text/plain": [
-       "[7838.422717702165,\n",
-       " 8846.676925547124,\n",
-       " 9281.424156797151,\n",
-       " 9985.533832854386,\n",
-       " 10867.367223976373,\n",
-       " 11375.769701265945]"
+       "([8074.157591248439,\n",
+       "  8648.537824799354,\n",
+       "  9610.93111536449,\n",
+       "  10075.19731378858,\n",
+       "  10545.214513443456,\n",
+       "  11353.355919091679],\n",
+       " [12111.236386872657,\n",
+       "  12972.80673719903,\n",
+       "  14416.396673046733,\n",
+       "  15112.79597068287,\n",
+       "  15817.82177016518,\n",
+       "  17030.033878637518])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "run_model(iterations, horizon, avg_working_time, avg_repair_time, n, m, \"L\")"
+    "run_model(iterations, horizon, avg_working_time, avg_repair_time, n, m, \"L\", c)"
    ]
   }
  ],
