reszta kosztow dodana

--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,18 +56,24 @@
     "iterations = 10\n",
     "\n",
     "# koszt jednostkowy\n",
-    "c = 1.5"
+    "c = 1.5\n",
+    "\n",
+    "# koszt instalacji\n",
+    "cost_inst = 20\n",
+    "\n",
+    "# koszt narzedzia\n",
+    "m_cost = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def model(horizon, avg_working_time, avg_repair_time, n, m, setup, c):\n",
+    "def model(horizon, avg_working_time, avg_repair_time, n, m, setup, c, cost_inst, m_cost):\n",
     "    # setup - układ liniowy \"L\" lub gniazdowy \"G\"\n",
     "    \n",
     "    # horyzont działania w minutach\n",
@@ -93,6 +99,12 @@
     "    \n",
     "    # zegar symulacji - najblizsze zadanie, które ma być wykonane\n",
     "    t = min(events)\n",
+    "    \n",
+    "    #koszt instalacji\n",
+    "    cost_inst = cost_inst if setup=='G' else 0\n",
+    "    \n",
+    "    #koszt narzedzi\n",
+    "    m_costs = m*m_cost\n",
     "     \n",
     "    # rozpoczynamy symulacje \"skacząc\" po kolejnych zdarzeniach  \n",
     "    while t <= horizon:\n",
@@ -194,29 +206,30 @@
     "        t = min(events)\n",
     "        \n",
     "    t_cost = [t*c for t in t_cum]\n",
+    "    cost = cost_inst+sum(t_cost)+m_costs\n",
     "    # wynik skumulowany czas oraz koszt\n",
-    "    return (t_cum, t_cost)"
+    "    return (t_cum, cost)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_model (iterations, horizon, avg_working_time, avg_repair_time, n, m, setup, c):\n",
+    "def run_model (iterations, horizon, avg_working_time, avg_repair_time, n, m, setup, c, cost_inst, m_cost):\n",
     "    avg_t_cum = []\n",
     "    avg_t_cost = []\n",
     "    for i in range (iterations):\n",
-    "        x = model( horizon, avg_working_time, avg_repair_time, n, m, setup, c)\n",
+    "        x = model( horizon, avg_working_time, avg_repair_time, n, m, setup, c, cost_inst, m_cost)\n",
     "        avg_t_cum.append(x[0])\n",
     "        avg_t_cost.append(x[1])\n",
-    "    return (list(map(np.mean, np.transpose(avg_t_cum))), list(map(np.mean, np.transpose(avg_t_cost))))\n"
+    "    return (list(map(np.mean, np.transpose(avg_t_cum))), np.mean(avg_t_cost))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -224,27 +237,22 @@
     {
      "data": {
       "text/plain": [
-       "([8074.157591248439,\n",
-       "  8648.537824799354,\n",
-       "  9610.93111536449,\n",
-       "  10075.19731378858,\n",
-       "  10545.214513443456,\n",
-       "  11353.355919091679],\n",
-       " [12111.236386872657,\n",
-       "  12972.80673719903,\n",
-       "  14416.396673046733,\n",
-       "  15112.79597068287,\n",
-       "  15817.82177016518,\n",
-       "  17030.033878637518])"
+       "([8308.28448224902,\n",
+       "  8234.100981199043,\n",
+       "  8368.957653949761,\n",
+       "  8220.458136728508,\n",
+       "  8335.431760367323,\n",
+       "  8321.260432384506],\n",
+       " 74714.74017031727)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "run_model(iterations, horizon, avg_working_time, avg_repair_time, n, m, \"L\", c)"
+    "run_model(iterations, horizon, avg_working_time, avg_repair_time, n, m, \"G\", c, cost_inst, m_cost)"
    ]
   }
  ],
