--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -561,22 +561,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_model (iterations, horizon, avg_working_time, avg_repair_time, n, m, setup, c, cost_inst, m_cost):\n",
-    "    avg_t_cum = []\n",
-    "    avg_t_cost = []\n",
-    "    for i in range (iterations):\n",
-    "        x = model(horizon, avg_working_time, avg_repair_time, n, m, setup, c, cost_inst, m_cost, i)\n",
-    "        avg_t_cum.append(x[0])\n",
-    "        avg_t_cost.append(x[1])\n",
-    "    return (list(map(np.mean, np.transpose(avg_t_cum))), np.mean(avg_t_cost))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -761,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wykres nr 7 przedstawia różnice w koszcie całkowitym pomiędzy układem gniazdowym a układem liniowym w zależności od zmiany jednostkowego kosztu przestoju dla stałej wartości kosztu instalacji równej 40 tys. zł. Wzrost kosztu o 1 skutkuje wzrostem kosztu całkowitego o około 8 tys. za każdym razem, można więc powiedzieć, że wartość ta jest współczynnikiem nachylenia krzywej.\n",
+    "Wykres nr 7 przedstawia różnice w koszcie całkowitym pomiędzy układem gniazdowym a układem liniowym w zależności od zmiany jednostkowego kosztu przestoju dla stałej wartości kosztu instalacji równej 40 tys. zł. Wzrost kosztu przestoju o 1 skutkuje wzrostem kosztu całkowitego o około 8 tys. wynika z tego, że wartość ta jest współczynnikiem nachylenia krzywej.\n",
     "\n",
     "Z wykresu można również odczytać, że dla wartości kosztu instalacji równej 40 tys. zł optymalne rozwiązania dla układu liniowego znajdują się poniżej osi x, czyli dla kosztu przestoju mniejszego lub równego 4 zł, zaś optymalne rozwiązania dla układu gniazdowego znajdują się powyżej osi x, czyli dla kosztu przestoju większego lub równego 5 zł."
    ]
