opis organizacji dodany

--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -20,6 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Opis organizacji\n",
+    "\n",
+    "Raport został przygotowany na potrzeby firmy GWINTEX S.A. Przedsiębiorstwo to jest potentatem w dziedzinie produkcji korkociągów. W tym celu wykorzystują bardzo nowoczesne maszyny metalurgiczne. Firma ma znaczne udziały zarówno na rynku polskim, jak i  europejskim. Przedsiębiorstwo GWINTEX S.A. wykorzystuje swój potencjał technologiczny jako przewagę konkurencyjną. W związku z postępującą zmianą kultury w piciu alkoholu Polaków, rośnie popyt na wina. Wiąże się to również ze znacznym wzrostem zamówień korkociągów. Poniższy raport pozwoli organizacji na zminimalizowanie swoich kosztów w zależności od sytuacji panującej na rynku. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -327,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na podstawie powyższych wykresów, można wysnuć wniosek że optymalna liczba zestawów narzędzi dla układu liniowego nie zależy od poziomu kosztu jednostkowego przestoju. Wykresy, wygenerowane dla różnych wartości kosztu jednostkowego przestoju, różnią się oczywiście wartościami całkowitego kosztu, ale przebieg relatywnych zmian jest podobny. Można to zaobserwować po zmianach natężenia barw. Liczba zestawu narzędzi różni się natomiast w zależności od kosztu pojedynczego zestawu narzędzi. Gdy koszt zestawu narzędzi oscyluje w okolicach od 5000 do 20000, optymalna liczba narzędzi wynosi 4 we wszystkich przypadkach jednostkowego kosztu przestoju. Natomiast gdy koszt zestawu przekracza 20000, optymalna liczba narzedzi wynosi 3. Przeanalizujmy jak wygląda dokładny przebieg optymalnego rozwiązania dla układu liniowego oraz różnych kosztów przestoju maszyny."
+    "Na podstawie powyższych wykresów, można wysnuć wniosek że optymalna liczba zestawów narzędzi dla układu liniowego nie zależy od poziomu kosztu jednostkowego przestoju. Wykresy, wygenerowane dla różnych wartości kosztu jednostkowego przestoju, różnią się oczywiście wartościami średniego całkowitego kosztu, ale przebieg relatywnych zmian jest podobny. Można to zaobserwować po zmianach natężenia barw. Liczba zestawu narzędzi różni się natomiast w zależności od kosztu pojedynczego zestawu narzędzi. Gdy koszt zestawu narzędzi oscyluje w okolicach od 5000 do 20000, optymalna liczba narzędzi wynosi 4 we wszystkich przypadkach jednostkowego kosztu przestoju. Natomiast gdy koszt zestawu przekracza 20000, optymalna liczba narzedzi wynosi 3. Przeanalizujmy jak wygląda dokładny przebieg optymalnego rozwiązania dla układu liniowego oraz różnych kosztów przestoju maszyny."
    ]
   },
   {
