--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -239,8 +239,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Wyniki analizy\n",
+    "## 4. Wyniki analizy\n",
     "\n",
+    "<br> Poniższy rozdział ma na celu przedstawienie wyników analizy przeprowadzonej dla opisanego powyżej problemu. Pomoże wskazać optymalną liczbę zestawów narzędzi, czy optymalnego rozmieszczenia maszyn w zależności od innych parametrów.\n",
+    "\n",
+    "### 4.1 Liczba zestawów narzędzi w zależności od kosztów przestoju i kosztów zestawu narzędzi\n",
     "<br> W tej części raportu zostaną przedstawione wyniki analizy, które mają na celu wskazać optymalną liczbę zestawów narzędzi w zależności od kosztów przestoju i kosztów zestawu narzędzi. Jak zostało powyżej wspomniane, przedsiębiorstwo ma dwie możliwości rozmieszczenia urządzeń na hali produkcyjnej, w układzie liniowym lub gniazdowym. Z tego względu poniższa analiza będzie uwzględniała również te obie możliwości rozmieszczenia. W poszukiwaniu optymalnej liczby zestawu narzędzi, przyjmiemy że koszt instalacji układu gniazdowego jest stały i wynosi 20,000 jednostek. Koszt za jedną jednostkę czasu przestoju będzie badany z zakresu wartości <3;6>, natomiast koszt jednego zestawu narzędzi z przedziału <5000;50000> z granulacją co 1000. Z opisu problemu wynika, że liczba zestawów narzędzi powinna być niższa niż liczba maszyn. Z tego względu analizowana będzie liczba zestawów narzędzi z przedziału <1;5>."
    ]
   },
