--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -1064,7 +1064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na wykresie X graficznie zaprezentowano zależność liczby narzędzi o kosztu całkowitego. Przyjęcie liczby narzędzi na poziomie 1 jest nieoptymalne, ponieważ koszty całkowite są znacznie większe w stosunku do pozostałych wariantów. Jednakże w takim układzie układ gniazdowy byłby optymalnym wyborem. Należy zauważyć, że wraz z kupnem dodatkowych narzędzi koszt całkowity nie zmienia się oraz układ gniazdowy wciąż pozostaje optymalnym wyborem."
+    "Na wykresie 9 graficznie zaprezentowano zależność liczby narzędzi o kosztu całkowitego. Przyjęcie liczby narzędzi na poziomie 1 jest nieoptymalne, ponieważ koszty całkowite są znacznie większe w stosunku do pozostałych wariantów. Jednakże w takim układzie układ gniazdowy byłby optymalnym wyborem. Należy zauważyć, że wraz z kupnem dodatkowych narzędzi koszt całkowity nie zmienia się oraz układ gniazdowy wciąż pozostaje optymalnym wyborem."
    ]
   }
  ],
