--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -868,7 +868,7 @@
    "metadata": {},
    "source": [
     "### 4.3 Analiza wyboru optymalnego układu produkcyjnego i liczby narzędzi w zależności od trzech rodzajów kosztów.\n",
-    "<br>W tęj części przeanalizowano zmiany optymalnej decyji w zależności od trzech kosztów: ceny narzędzi, kosztu przestoju i różnicy w koszcie między układem liniowym i gniazdowym. W symulacji koszt jednostkowy przestoju przyjęto z przedziału od 3 do 6, koszt narzędzi z przedziału od 5000 do 30000 co 5000 oraz różnicę w koszcie instalacji z przedziału od 16000 do 26000 co 5000.  "
+    "<br>W tej części przeanalizowano zmiany optymalnej decyji w zależności od trzech kosztów: ceny narzędzi, kosztu przestoju i różnicy w koszcie między układem liniowym i gniazdowym. W symulacji koszt jednostkowy przestoju przyjęto z przedziału od 3 do 6, koszt narzędzi z przedziału od 5000 do 30000 co 5000 oraz różnicę w koszcie instalacji z przedziału od 16000 do 26000 co 5000.  "
    ]
   },
   {
