--- a/Raport_GWINTEX.ipynb
+++ b/Raport_GWINTEX.ipynb
@@ -953,7 +953,7 @@
     "#ax.set_title(\"Koszt całkowity w zależności od trzech rodzajów kosztu.\",size=14,loc='left')\n",
     "ax.legend([scat1, scat2], ['Układ gniazdowy', 'Układ liniowy'], numpoints = 1,loc=\"upper right\")\n",
     "plt.tight_layout()\n",
-    "fig.text(.1, -0.2, \"Rysunek 7. Koszt całkowity w zależności od kosztu przestoju, narzędzi oraz różnicy w koście isntalacji. \\n\"\n",
+    "fig.text(.1, -0.2, \"Rysunek 8. Koszt całkowity w zależności od kosztu przestoju, narzędzi oraz różnicy w koście isntalacji. \\n\"\n",
     "                     \"Całkowity koszt jest przedtawiony za pomocą natężenia i wielkości symbolu. \\n\", ha='left')\n",
     "plt.show()"
    ]
@@ -962,7 +962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rysunek powyżej przedstawia zmiany kosztu całkowitego instalacji w zależności od trzech typów kosztu. Całkowity koszt jest przedtawiony za pomocą natężenia i wielkości symbolu w celu lepszej identyfikacji trendu. Tendecja dla obu układów jest podobna. Najsilnijeszy wpływ na wzrost kosztu całkowitego ma kosztu przestoju przy niezmienionych pozosałych kosztach. Dla ustalonego jednostkowego kosztu przestoju zmiany kosztu narzędzi oraz różnicy w koście instalacji nie powodują znacznego wzrostu kosztu całkowitego."
+    "Rysunek 8 przedstawia zmiany kosztu całkowitego instalacji w zależności od trzech typów kosztu. Całkowity koszt jest przedstawiony za pomocą natężenia i wielkości symbolu w celu lepszej identyfikacji trendu. Tendencja dla obu układów jest podobna. Najsilnijeszy wpływ na wzrost kosztu całkowitego ma kosztu przestoju przy niezmienionych pozostałych kosztach. Dla ustalonego jednostkowego kosztu przestoju zmiany kosztu narzędzi oraz różnicy w koście instalacji nie powodują znacznego wzrostu kosztu całkowitego."
    ]
   },
   {
@@ -1007,7 +1007,7 @@
     "ax.set_zlabel(\"Koszt całkowity\")\n",
     "ax.legend()\n",
     "\n",
-    "fig.text(.1, -0.001, \"Rysunek 8. Koszt całkowity w zależności od kosztu przestoju i kosztu narzędzi. \\n\"\n",
+    "fig.text(.1, -0.001, \"Rysunek 9. Koszt całkowity w zależności od kosztu przestoju i kosztu narzędzi. \\n\"\n",
     "                     \"Wielkość symboli przedstawia liczbę narzędzi. \\n\", ha='left')\n",
     "plt.show()"
    ]
@@ -1056,7 +1056,7 @@
     "plt.legend(loc='upper right')\n",
     "plt.title(\"Zmiana kosztu całkowitego w zależności od liczby narzędzi\")\n",
     "\n",
-    "plt.text(.1, -100000, \"Rysunek 9. Koszt całkowity w zależności od liczby narzędzi. \\n\", ha='left')\n",
+    "plt.text(.1, -100000, \"Rysunek 10. Koszt całkowity w zależności od liczby narzędzi. \\n\", ha='left')\n",
     "plt.show()"
    ]
   },
@@ -1064,7 +1064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na wykresie 9 graficznie zaprezentowano zależność liczby narzędzi o kosztu całkowitego. Przyjęcie liczby narzędzi na poziomie 1 jest nieoptymalne, ponieważ koszty całkowite są znacznie większe w stosunku do pozostałych wariantów. Jednakże w takim układzie układ gniazdowy byłby optymalnym wyborem. Należy zauważyć, że wraz z kupnem dodatkowych narzędzi koszt całkowity nie zmienia się oraz układ gniazdowy wciąż pozostaje optymalnym wyborem."
+    "Na wykresie 10 graficznie zaprezentowano zależność liczby narzędzi od kosztu całkowitego. Przyjęcie liczby narzędzi na poziomie 1 jest nieoptymalne, ponieważ koszty całkowite są znacznie większe w stosunku do pozostałych wariantów. Jednakże w takim układzie układ gniazdowy byłby optymalnym wyborem. Należy zauważyć, że wraz z kupnem dodatkowych narzędzi koszt całkowity nie zmienia się znacznie oraz układ gniazdowy wciąż pozostaje optymalnym wyborem."
    ]
   }
  ],
